# TODO-GIAIC

./: .gitignore  003.md  API.md  DEPLOYMENT-GUIDE.md  Dockerfile  FRONTEND-FIXES.md  FRONTEND-UPDATES-TASKS.md  FRONTEND_LIB_RECOVERY.md  RAILWAY_DEPLOYMENT.md  README.md  RECOVERY-TASKS-v2.md  RENDER_DEPLOYMENT.md  SOCIAL_MEDIA_POSTS.md  UPDATE-FRONTEND.md  frontend-api-alignment-tasks.md  perks_limits.md  pyproject.toml  railway.toml  render.yaml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_notes_reminders.py  003_achievements.py  004_credits_subscriptions.py  005_activity_tombstones.py  006_notifications.py  007_job_queue.py  008_indexes.py
backend/docs/: API.md  alerting-rules.yaml  api-versioning.md  load-test-results.md  observability.md  slo-dashboard.md
backend/migrations/: add_created_at_to_user_achievement_states.sql  add_missing_subscription_columns.sql  comprehensive_schema_fix.sql  fix_credit_enum_case.sql
backend/scripts/: generate_openapi.py
backend/src/: __init__.py  config.py  dependencies.py  main.py
backend/src/api/: __init__.py  achievements.py  activity.py  ai.py  auth.py  credits.py  focus.py  health.py  notes.py  notifications.py  recovery.py  reminders.py  router.py  subscription.py  subtasks.py  tasks.py  templates.py  users.py
backend/src/events/: __init__.py  bus.py  handlers.py  subtask_handlers.py  types.py
backend/src/integrations/: __init__.py  ai_agent.py  checkout_client.py  deepgram_client.py  google_oauth.py
backend/src/jobs/: __init__.py  queue.py  worker.py
backend/src/lib/: __init__.py  jwt_keys.py  limits.py  rrule.py
backend/src/middleware/: __init__.py  auth.py  error_handler.py  idempotency.py  logging.py  metrics.py  rate_limit.py  request_id.py  security.py
backend/src/migrations/: __init__.py  runner.py
backend/src/models/: __init__.py  achievement.py  activity.py  auth.py  base.py  credit.py  focus.py  idempotency.py  job_queue.py  note.py  notification.py  reminder.py  subscription.py  subtask.py  task.py  tombstone.py  user.py
backend/src/schemas/: __init__.py  achievement.py  ai.py  ai_agents.py  auth.py  common.py  credit.py  enums.py  focus.py  note.py  notification.py  reminder.py  subscription.py  subtask.py  task.py  template.py
backend/src/services/: __init__.py  achievement_service.py  activity_service.py  ai_service.py  auth_service.py  credit_service.py  focus_service.py  note_service.py  notification_service.py  recovery_service.py  recurring_service.py  reminder_service.py  subscription_service.py  task_service.py  user_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/contract/: conftest.py  test_ai_contract.py  test_ai_fuzz.py  test_ai_schemas.py  test_auth_contract.py  test_auth_fuzz.py  test_notes_contract.py  test_reminders_contract.py  test_subscription_fuzz.py  test_tasks_contract.py  test_tasks_fuzz.py
backend/tests/factories/: __init__.py  (+2 more)
backend/worker/: main.py
(+505 files in other folders)
